# strictprotocol

./: publish.sh  pyproject.toml  setup.cfg
docs/: index.md
strictprotocol/: __init__.py  core.py  safe_typing.py
tests/: test_strictprotocol.py
