[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strictprotocol"
version = "0.1.0"
description = "A runtime-enforced Protocol for strict signature matching"
authors = [{name = "Your Name", email = "your@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/strictprotocol"
